@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript-support/Attic/livecdfs-update.sh,v 1.31 2005/02/28 23:21:09 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript-support/Attic/livecdfs-update.sh,v 1.32 2005/03/02 02:14:34 wolf31o2 Exp $
 
 /usr/sbin/env-update
 source /etc/profile
@@ -23,6 +23,7 @@ rc-update del iptables default
 rc-update del netmount default
 rc-update add autoconfig default
 rc-update del keymaps
+rc-update del serial
 rc-update del consolefont
 rc-update add modules default
 rc-update add pwgen default
